# SplendorBot

./: .gitignore  README.md  index.py  justfile  main.py  package-lock.json  pyproject.toml  tailwind.config.js
assets/css/: tailwind.css
assets/templates/: card_back.html  game_board.html  gem_card.html  gem_pool.html  new_game.html  noble_card.html  player.html  reactive_test_template.html  waiting_room.html
css/: tailwind.css
server/: index.py
server/routers/splendor/: game_html.py  pubsub.py  router.py
src/splendor_bot/: base_deck.py  game.py  intelligence.py  types.py
src/splendor_bot/game_logic/: base_deck.py  game.py  types.py
src/splendor_bot/intelligence/: intelligence.py
src/splendor_bot/server/: diagnose.py  game_html.py  pubsub.py  router.py
templates/: card.html  card_back.html  game.html  game.template.html  game_board.html  gem_card.html  gem_pool.html  noble.html  noble_card.html  player.html  waiting_room.html  ws_test.html
tests/: test_deal_card.py  test_end_turn.py  test_manual_gameplay.py  test_new_game.py  test_purchase_card.py  test_reserve_card.py  test_take_and_return_gems.py  test_win_nobles.py
tests/game_logic/: test_deal_card.py  test_end_turn.py  test_manual_gameplay.py  test_new_game.py  test_purchase_card.py  test_reserve_card.py  test_take_and_return_gems.py  test_win_nobles.py
