[project]
name = "splendor_bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Matt Zhang", email = "set.stun@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/#egg=splendor-bot",
]
